--- a/package.json
+++ b/package.json
@@ -1,27 +1,57 @@
 {
   "name": "virtualspirit-test",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:ts": "tsc --skipLibCheck --jsx preserve --noEmit"
   },
   "dependencies": {
+    "@hookform/devtools": "^4.3.1",
+    "clsx": "^2.0.0",
+    "lint-staged": "^15.2.0",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-hook-form": "^7.49.2",
+    "valibot": "^0.24.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "husky": "^8.0.3",
+    "postcss": "^8.4.32",
+    "tailwind-variants": "^0.1.19",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
+  },
+  "volta": {
+    "node": "20.10.0"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "pnpm@8.11.0",
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "./src/*.{js,jsx,ts,tsx}": [
+      "pnpm run lint:ts",
+      "pnpm run lint --fix"
+    ]
   }
 }
